Fixed some kind of border on safari and ios

--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,10 @@
   justify-content: center;
   align-items: center;
   --border-size: 75px;
-  border: var(--border-size) solid transparent;
-  border-image: url(./assets/images/pattern2.png) 33% round;
+  border-width: var(--border-size);
+  border-style: solid;
   height: calc(100% - 2 * var(--border-size));
+  border-image: url(./assets/images/pattern2.png) 33% round;
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
